2011-03-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Fix Regression: Content not drawn when scrolling horizontally in an RTL page.
        https://bugs.webkit.org/show_bug.cgi?id=55077.

        * fast/dom/scroll-reveal-left-overflow.html: Added.
        * fast/dom/scroll-reveal-top-overflow.html: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.txt: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.txt: Added.

2011-03-08  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig

        Bug 55994 - Functions on Array.prototype should check length first.
        These methods are designed to work on generic objects too, and if 'length'
        is a getter that throws an exception, ensure this is correctly thrown
        (even if other exceptions would be thrown, too).

        Added test cases.

        * fast/js/array-proto-func-length-getter-except-expected.txt: Added.
        * fast/js/array-proto-func-length-getter-except.html: Added.
        * fast/js/script-tests/array-proto-func-length-getter-except.js: Added.
        (lengthGetter):
        (test):

2011-03-08  Mihai Parparita  <mihaip@chromium.org>

        Add failing expectation for compositing/webgl/
        webgl-nonpremultiplied-blend.html.

        * platform/chromium/test_expectations.txt:

2011-03-08  Kenji Imasaki  <imasaki@chromium.org>

        Reviewed by David Levin. 

        [Chromium] Clean up Media GPU test expectation since
        http://crbug.com?id=74887 was fixed. These expectations are based
        on the results on flakiness dashboard.
